Got the building process down. App opens and downloads successfully

--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "productName": "README Generator",
     "files": [
       "main.js",
+      "src/**/*",
       "dist/**/*",
-      "node_modules/**/*",
-      "package.json"
+      "node_modules/**/*"
     ],
     "win": {
       "target": "nsis"
