Created HTML form a person has to fill out on index.html

--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "electron-squirrel-startup": "^1.0.1",
-    "inquirer": "^12.3.2"
+    "electron-squirrel-startup": "^1.0.1"
   },
   "build": {
     "icon": "src/assets/icon.png",
